--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,11 @@ targetCompatibility = 1.5
 
 
 repositories {
-        
+     
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
+    compile 'net.sourceforge.jtds:jtds:1.2.7'
     compile group: 'io.dropwizard', name: 'dropwizard-core', version:'0.7.0'
     compile group: 'io.dropwizard', name: 'dropwizard-db', version:'0.7.1'
     compile group: 'org.hibernate', name: 'hibernate-core', version:'4.3.1.Final'
