--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,27 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'eclipse'
 
 group = 'DropwizardHelloWorld'
 version = '0.0.1-SNAPSHOT'
 
 description = """DropwizardHelloWorld"""
 
-sourceCompatibility = 1.5
-targetCompatibility = 1.5
-
-
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
      
      maven { url "http://repo.maven.apache.org/maven2" }
 }
+
+def dropwizardVersion = "0.9.2"
+
 dependencies {
     compile 'net.sourceforge.jtds:jtds:1.2.7'
-    compile group: 'io.dropwizard', name: 'dropwizard-core', version:'0.7.0'
-    compile group: 'io.dropwizard', name: 'dropwizard-db', version:'0.7.1'
-    compile group: 'org.hibernate', name: 'hibernate-core', version:'4.3.1.Final'
+    compile group: 'io.dropwizard', name: 'dropwizard-core', version:dropwizardVersion
+    compile group: 'io.dropwizard', name: 'dropwizard-db', version:dropwizardVersion
+    compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version:dropwizardVersion
+	compile group: 'io.dropwizard', name: 'dropwizard-logging', version: dropwizardVersion
     compile group: 'org.hibernate', name: 'hibernate', version:'3.5.4-Final'
-    compile group: 'org.hibernate', name: 'hibernate-annotations', version:'3.5.6-Final'
-    compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version:'0.7.1'
-    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
-    compile(group: 'org.slf4j', name: 'slf4j-log4j12', version:'1.7.5') {
-exclude(module: 'slf4j-log4j12')
-exclude(module: 'log4j')
-    }
-    compile group: 'org.slf4j', name: 'slf4j-simple', version:'1.7.5'
-    //compile group: 'com.microsoft.sqlserver', name: 'sqljdbc4', version:'4.0'
 }
